# DR

./: CMakeLists.txt  alt_main.c  main.c  main1.c
CMake/: FindSDL.cmake
include/: dr_argparser.h  dr_dice.h  dr_dmg.h  dr_elem.h  dr_game.h  dr_geom.h  dr_item.h  dr_level.h  dr_map.h  dr_monster.h  dr_pathfinder.h  dr_player.h  dr_vis.h  dr_weapon.h
lib/: SDL2.exp  SDL2.lib  SDL2main.lib  cosmic-static.lib  cosmic.exp  cosmic.lib  libSDL2.dylib  libcosmic.dylib  pdcurses.lib
src/: dr_argparser.c  dr_dice.c  dr_game.c  dr_geom.c  dr_item.c  dr_level.c  dr_map.c  dr_monster.c  dr_pathfinder.c  dr_player.c  dr_vis.c
tests/: test_dice.c  test_dmg.c
